fixed some contrast issues for lesson 5

--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -20,7 +20,7 @@ h1, h2, h3, h4 {
 }
 
 header {
-	background-color: #ED6B86;
+	background-color: #681e2e;
 	display: grid;
     grid-template-columns: 5fr 1fr 1fr;
 	align-items: center;
@@ -57,7 +57,7 @@ header div #datetime{
 }
 
 footer {
-	background-color: #ED6B86;
+	background-color: #681e2e;
 	display: flex;
 	flex-flow: column;
 	align-items: center;
