--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -8,7 +8,7 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background: #ED6B86;
+    background: #681e2e;
     color: white;
 }
 
@@ -117,7 +117,7 @@ th {
 
 .sample1 {
     font-family: 'Montserrat', sans-serif;
-    background-color: #ED6B86;
+    background-color: #681e2e;
     color: white;
     font-size: 30px;
 }
